5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1649_1055.log
== TEST (2019-04-15 20:21:43) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo:"))
d=float(input("distancia:"))
g= 9,8
from math import*
r= (vel ** 2 * sin * 2 * ang)/ g
if r > d:
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (vel ** 2 * sin * 2 * ang)/ g
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:23:23) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo:"))
d=float(input("distancia:"))
g= 9,8
from math import*
r= (vel ** 2 * sin * (2 * ang))/ g
if r > d:
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (vel ** 2 * sin * (2 * ang))/ g
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:23:32) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo:"))
d=float(input("distancia:"))
g= 9,8
from math import*
r= (vel ** 2 * sin * (2 * ang))/ g
if r > d:
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= (vel ** 2 * sin * (2 * ang))/ g
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:23:44) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo:"))
d=float(input("distancia:"))
g= 9,8
from math import*
r= ((vel ** 2) * sin * (2 * ang))/ g
if r > d:
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= ((vel ** 2) * sin * (2 * ang))/ g
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 20:24:48) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo:"))
d=float(input("distancia:"))
g= 9,8
from math import*
r= ((vel ** 2) * sin * (2 * ang))/ g
if r==d:
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    r= ((vel ** 2) * sin * (2 * ang))/ g
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:35:57) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.148932
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    r= ((v0**2)*(sin(2*radians(ang))))/g
NameError: name 'v0' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:35:58) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.177652
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    r= ((v0**2)*(sin(2*radians(ang))))/g
NameError: name 'v0' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:36:21) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(d-r)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.163324
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    r= ((v0**2)*(sin(2*radians(ang))))/g
NameError: name 'v0' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:36:30) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(d-r<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.183535
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(d-r<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:36:41) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.158167
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:36:47) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.158233
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:36:47) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.16949
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:36:47) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.136083
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:36:48) 
-- CODE:
vel=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.227986
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/1055/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:37:08) 
-- CODE:
v0=float(input("velocidade inicial:"))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.151033
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:37:22) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g= 9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.141145
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:37:36) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
r= ((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.175501
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:37:50) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=((v0**2)*(sin(2*radians(ang))))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.197645
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:37:56) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=((v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.159978
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:38:16) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.165792
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:38:31) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.147465
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:32) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
File "XXXX", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:38:32) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
File "XXXX", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:38:34) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.166648
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:38:34) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.190482
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:38:55) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if(abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.159605
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if(abs(D-R<0.1):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:38:59) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.169039
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:38:59) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.145847
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:39:00) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.244892
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:39:00) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.13721
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:39:00) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.247034
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:39:00) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
File "XXXX", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:39:01) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.128756
-- ERROR:
  File "/home/codebench/codes/1649/1055/main.py", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:39:35) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
File "XXXX", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:39:38) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
File "XXXX", line 6
    if (abs(D-R<0.1):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:39:54) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.177026
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:39:55) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:40:40) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:42:06) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.171998
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:42:16) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:42:18) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.204229
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:42:20) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.196276
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:42:21) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.102996
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:42:21) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.151765
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:42:21) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.122493
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/1055/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:43:05) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:44:03) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:44:04) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.108994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:51:12) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:59:11) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.222696
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:59:11) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.254107
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:59:11) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.198831
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1649/1055/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 22:59:12) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:59:12) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.131901
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 22:59:14) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.204945
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1649/1055/main.py", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:34:13) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:38:29) 
-- CODE:
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R=(v0**2)*(sin(2*radians(ang)))/g
NameError: name 'sin' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:39:25) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g
if (abs(D-R)<0.1):
    print("sim")
else:
    print("nao")


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (abs(D-R)<0.1):
NameError: name 'D' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:40:06) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")


-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:40:29) 
-- CODE:
from math import*
v0=float(input("velocidade inicial: "))
ang=float(input("angulo alfa: "))
d=float(input("distancia porco-passaro: "))
g=9.8
R=(v0**2)*(sin(2*radians(ang)))/g

if (abs(d-R)<0.1):
    print("sim")
else:
    print("nao")


-- EXECUTION TIME:
0.20527
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
